# driver-cam-genius

./: .clangd  CMakeLists.txt  CMakePresets.json  VideoPlayer.cpp  analizar_raw.ps1  auditoria_proyecto.md  bucle_procesamiento.ps1  build.ps1  capturar_isocrono_async.ps1  capturar_video.ps1  compilar_reproductor.ps1  compile_flags.txt  diagnostico_pipes.ps1  encender_camara.ps1  escanear_endpoints.ps1  escanear_registros_sonix.ps1  escaner.ps1  inicializar_sensor_sif.ps1  mapper.ps1  mingw-toolchain.cmake  nstalar_dependencias.ps1  reproductor.cpp  stream_crudo.raw  verificar_lectura_sif.ps1  verificar_sincronismo.ps1
installer/: jhoan_driver.cer  videocam.cat  videocam.inf
src/: CameraInitializer.hpp  bandwidth_manager.cpp  bandwidth_manager.hpp  display.hpp  driver_core.cpp  driver_core.cppm  driver_core.hpp  driver_types.cppm  frame_sync.hpp  genius_ilook_317.cpp  genius_ilook_317.hpp  image_utils.hpp  main.cpp  ov7630_registers.hpp  protocol_handler.hpp  sn9c103_registers.hpp  usb_descriptors.hpp  video_capture.cpp  video_capture.hpp
